+ Modpacks / readme update